--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "strict": true,
         "module": "commonjs",
         "target": "es5",
+        "lib": ["dom", "es6", "scripthost"],
         "jsx": "react"
     }
 }
